[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-cors = "0.7.0"
serde = {version = "1.0.218" , features = ["derive"] }
serde_json = "1.0.139"
tokio = {version = "1.43.0" , features = ["full"] }
captcha = "0.0.9"
base64 = "0.22.1"
futures-util = "0.3.31"
reqwest = "0.12.12"